# GameTest

./: CMakeLists.txt
Data/: AssetLicences.txt  Example.bsl  Example.bsl.asset  ResourceManifest.asset
Data/Cerberus/: Cerberus.FBX.asset
Data/GUI/: BansheeIcon.png.asset  ExampleButtonActive.png.asset  ExampleButtonHover.png.asset  ExampleButtonNormal.png.asset  segoeuil.ttf.asset  segoeuil_24_texpage_0.asset  seguisb.ttf.asset  seguisb_24_texpage_0.asset
Data/Pistol/: Pistol01.fbx.asset
Data/Shaders/: CustomDeferredLighting.bsl  CustomDeferredSurface.bsl  CustomDeferredSurface.bsl.asset  CustomForward.bsl  CustomForward.bsl.asset  CustomVertex.bsl  CustomVertex.bsl.asset  Noise.bslinc
lib/x64/Debug/: Common.lib  bsfD3D11RenderAPI.exp  bsfD3D11RenderAPI.lib  bsfFBXImporter.exp  bsfFBXImporter.lib  bsfFontImporter.exp  bsfFontImporter.lib  bsfFreeImgImporter.exp  bsfFreeImgImporter.lib  bsfGLRenderAPI.exp  bsfGLRenderAPI.lib  bsfOpenAudio.exp  bsfOpenAudio.lib  bsfPhysX.exp  bsfPhysX.lib  bsfRenderBeast.exp  bsfRenderBeast.lib  bsfSL.exp  bsfSL.lib  bsfVulkanRenderAPI.exp  bsfVulkanRenderAPI.lib
source/Common/: BsCameraFlyer.cpp  BsCameraFlyer.h  BsExampleConfig.h  BsExampleFramework.h  BsFPSCamera.cpp  BsFPSCamera.h  BsFPSWalker.cpp  BsFPSWalker.h  BsObjectRotator.cpp  BsObjectRotator.h  CMakeLists.txt  CMakeSources.cmake
source/Game/: CMakeLists.txt  main.cpp
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
(+3 files in other folders)
